--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,15 @@ script:
   - yarn test
 after_success:
   - yarn build
+  - yarn global add now
+  - now deploy --public --token=$NOW_API_KEY
+  - now alias labs --token=$NOW_API_KEY --team=com || true
+  - now alias travis --token=$NOW_API_KEY --team=com || true
+  - now alias jarvis --token=$NOW_API_KEY --team=com || true
+  - now alias jiro --token=$NOW_API_KEY --team=com || true
+  - now alias ono --token=$NOW_API_KEY --team=com || true
+  - now rm dayflow --yes --safe --token=$NOW_API_KEY || true
+  - echo "Code deployed to staging server"
 deploy:
   provider: heroku
   strategy: git
