--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ deploy:
     - yarn build
     - yarn global add now
     - now deploy --public --token=$NOW_API_KEY --team=lab
-    - now alias --token=$NOW_API_KEY || true --team=lab
-    - now rm dayflow --yes --safe --token=$NOW_API_KEY || true --team=lab
+    - now alias --token=$NOW_API_KEY --team=lab || true
+    - now rm dayflow --yes --safe --token=$NOW_API_KEY --team=lab || true
     - echo "Code deployed to now server"
     - git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/dayflow.git
     - git push heroku master
