--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ after_success:
   - yarn build
   - yarn global add now
   - now deploy --public --token=$NOW_API_KEY --team=com
-  - now alias labs --token=$NOW_API_KEY --team=com || true
-  - now alias travis --token=$NOW_API_KEY --team=com || true
-  - now alias tezuka --token=$NOW_API_KEY --team=com || true
-  - now alias jiro --token=$NOW_API_KEY --team=com || true
-  - now alias ono --token=$NOW_API_KEY --team=com || true
+  - now alias labs --token=$NOW_API_KEY --team=com
+  - now alias travis --token=$NOW_API_KEY --team=com
+  - now alias tezuka --token=$NOW_API_KEY --team=com
+  - now alias jiro --token=$NOW_API_KEY --team=com
+  - now alias ono --token=$NOW_API_KEY --team=com
   - now rm dayflow --yes --safe --token=$NOW_API_KEY --team=com || true
   - echo "Code deployed to staging server"
 deploy:
