--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,21 +10,22 @@ deploy:
     - yarn
     - yarn build
     - yarn global add now
-    - now --name "$(basename $(pwd))-$(git describe --tags --long)" -e GIT_TAG="$(git describe --tags --long)" --public --token=$NOW_API_KEY --team=lab
-    - now alias live --token=$NOW_API_KEY --team=lab
-    - now alias launch --token=$NOW_API_KEY --team=lab
-    - now alias mail --token=$NOW_API_KEY --team=lab
-    - now alias pay --token=$NOW_API_KEY --team=lab
-    - now alias bin --token=$NOW_API_KEY --team=lab
-    - now alias box --token=$NOW_API_KEY --team=lab
-    - now alias hub --token=$NOW_API_KEY --team=lab
-    - now alias job --token=$NOW_API_KEY --team=lab
-    - now alias map --token=$NOW_API_KEY --team=lab
-    - now alias labs --token=$NOW_API_KEY --team=lab
-    - now alias ship --token=$NOW_API_KEY --team=lab
-    - now alias photo --token=$NOW_API_KEY --team=lab
-    - now alias search --token=$NOW_API_KEY --team=lab
-    - now rm dayflow --yes --safe --token=$NOW_API_KEY --team=lab || true
+    - name=$(basename $(pwd))-$(git describe --tags --long)
+    - deploy=$(now --name $name -e GIT_TAG=$name --public --token=$NOW_API_KEY --team=lab)
+    - now alias $deploy live --token=$NOW_API_KEY --team=lab
+    - now alias $deploy launch --token=$NOW_API_KEY --team=lab
+    - now alias $deploy mail --token=$NOW_API_KEY --team=lab
+    - now alias $deploy pay --token=$NOW_API_KEY --team=lab
+    - now alias $deploy bin --token=$NOW_API_KEY --team=lab
+    - now alias $deploy box --token=$NOW_API_KEY --team=lab
+    - now alias $deploy hub --token=$NOW_API_KEY --team=lab
+    - now alias $deploy job --token=$NOW_API_KEY --team=lab
+    - now alias $deploy map --token=$NOW_API_KEY --team=lab
+    - now alias $deploy labs --token=$NOW_API_KEY --team=lab
+    - now alias $deploy ship --token=$NOW_API_KEY --team=lab
+    - now alias $deploy photo --token=$NOW_API_KEY --team=lab
+    - now alias $deploy search --token=$NOW_API_KEY --team=lab
+    - now rm $name --yes --safe --token=$NOW_API_KEY --team=lab || true
     - echo "Code deployed to now server"
     - git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/dayflow.git
     - git push heroku master
