--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build:app": "cross-env NODE_ENV=production webpack --config build/webpack.config.js --progress --hide-modules",
     "now": "npm run build && now --public --force && now alias us && open https://us.now.sh/build",
     "heroku": "git push heroku master",
-    "heroku-postbuild": "npm run build",
-    "now-build": "echo hello"
+    "heroku-postbuild": "echo build",
+    "now-build": "echo build"
   },
   "dependencies": {
     "axios": "^0.16.2",
