--- a/package.json
+++ b/package.json
@@ -14,15 +14,11 @@
     "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
     "test:cover": "nyc --reporter=html --reporter=text mocha",
     "dev": "nodemon --ignore client/ --ignore dist/ server.js",
-    "start": "cross-env NODE_ENV=production node server",
-    "build": "rimraf dist && npm run build:server && npm run build:client && npm run build:app",
+    "build": "rimraf dist && npm run build:server && npm run build:client && npm run build:app && rimraf deploy/dist && cp -R dist deploy/",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "build:app": "cross-env NODE_ENV=production webpack --config build/webpack.config.js --progress --hide-modules",
-    "now": "npm run build && now --public --force && now alias us && open https://us.now.sh/build",
-    "heroku": "git push heroku master",
-    "heroku-postbuild": "echo build",
-    "now-build": "echo build"
+    "start": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
     "axios": "^0.16.2",
