--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
     "test:cover": "nyc --reporter=html --reporter=text mocha",
     "dev": "nodemon --ignore client/ --ignore dist/ server.js",
+    "up": "npm run build && npm run --prefix deploy up",
     "build": "rimraf dist && npm run build:server && npm run build:client && npm run build:app && rimraf deploy/dist && cp -R dist deploy/",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
