--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
     "test:cover": "nyc --reporter=html --reporter=text mocha",
     "dev": "nodemon --ignore client/ --ignore dist/ server.js",
-    "up": "npm run build && npm run --prefix deploy up",
-    "build": "rimraf dist && npm run build:server && npm run build:client && npm run build:app && rimraf deploy/dist && cp -R dist deploy/",
-    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "build:app": "cross-env NODE_ENV=production webpack --config build/webpack.config.js --progress --hide-modules",
-    "start": "cross-env NODE_ENV=production node server"
+    "up": "npm run bu && npm run --prefix bin push",
+    "bu": "rimraf dist && npm run bu:server && npm run bu:client && npm run bu:app && gulp && rimraf deploy/dist && cp -R dist deploy/",
+    "bu:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "bu:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "bu:app": "cross-env NODE_ENV=production webpack --config build/webpack.config.js --progress --hide-modules",
+    "start": "cross-env NODE_ENV=production node server",
+    "push": "npm run now && npm run heroku",
+    "now": "now --public --force && now alias us && open https://us.now.sh/build && now rm dayflow --yes --safe || true",
+    "heroku": "git init && git remote add heroku https://git.heroku.com/dayflow.git && git add . && git commit -am 'new deployment' && git push heroku master --force && open http://yah.vn/build"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -150,6 +153,8 @@
     "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "inquirer": "^3.3.0",
     "istanbul": "^1.1.0-alpha.1",
     "less": "^2.7.2",
